# PyConfig

./: .gitignore  404.html  LICENSE  README.md  index.html  main.py  mkdocs.yml  pyproject.toml
about/: index.html
big-data/dask/: index.html
big-data/numpy/: index.html
cli/typer/: index.html
code-quality/logger/: index.html
code-quality/types/: index.html
docs/: about.md  index.md
docs/documentation/: docstrings.md  mkdocs.md  sphinx.md
docs/python-setup/: git.md  pyproject.md
docs/python-setup/uv/: intro.md  project-setup.md  python-install.md
documentation/docstrings/: index.html
documentation/mkdocs/: index.html
documentation/sphinx/: index.html
python-setup/git/: index.html
python-setup/pyproject/: index.html
python-setup/ruff/format/: index.html
python-setup/ruff/intro/: index.html
python-setup/ruff/linter/: index.html
python-setup/uv/intro/: index.html
python-setup/uv/project-setup/: index.html
python-setup/uv/python-install/: index.html
search/: search_index.json
share-code/gh-pages/: index.html
share-code/mkdocs-material/: index.html
share-code/mkdocstrings/: index.html
share-code/pypi/: index.html
src/: main.py
